// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CashFlowRow> renders with message 1`] = `
<CashFlowRow
  label="Rent"
  message="What did you enter!?"
  validRow={false}
>
  <FormField
    className="cashflow"
    inline={true}
  >
    <div
      className="inline field cashflow"
    >
      <WithMessageAbove
        isUserError={true}
        message="What did you enter!?"
      >
        <div
          className="with-message-above "
        >
          <div
            className="message-above invalid"
            id="undefinedMessage"
            tabIndex={-1}
          >
            What did you enter!?
          </div>
          <div
            className="below-message"
          >
            <div
              className="flex-row"
            >
              <span>
                Some content
              </span>
              <div
                className="cashflow-column cashflow-column-label"
              >
                <label
                  htmlFor="undefined_monthly"
                  id="undefinedLabel"
                  tabIndex="-1"
                >
                  Rent
                </label>
              </div>
            </div>
          </div>
        </div>
      </WithMessageAbove>
      <Surrounder
        Top={
          <InvalidMessage
            id="undefinedMessage"
            validRow={false}
          >
            What did you enter!?
          </InvalidMessage>
        }
      >
        <div
          className="surrounder"
        >
          <div
            className="top horizontal"
          >
            <InvalidMessage
              id="undefinedMessage"
              validRow={false}
            >
              <div
                className="invalid "
                id="undefinedMessage"
              >
                What did you enter!?
              </div>
            </InvalidMessage>
          </div>
          <div
            className="middle horizontal"
          >
            <div
              className="center horizontal content"
            >
              <span>
                Some content
              </span>
              <div
                className="cashflow-column cashflow-column-label"
              >
                <label
                  htmlFor="undefined_monthly"
                  id="undefinedLabel"
                  tabIndex="-1"
                >
                  Rent
                </label>
              </div>
            </div>
          </div>
        </div>
      </Surrounder>
    </div>
  </FormField>
</CashFlowRow>
`;

exports[`<CashFlowRow> renders with no message 1`] = `
<CashFlowRow
  label="Rent"
  validRow={true}
>
  <FormField
    className="cashflow"
    inline={true}
  >
    <div
      className="inline field cashflow"
    >
      <WithMessageAbove
        isUserError={false}
      >
        <div
          className="with-message-above "
        >
          <div
            className="below-message"
          >
            <div
              className="flex-row"
            >
              <span>
                Some content
              </span>
              <div
                className="cashflow-column cashflow-column-label"
              >
                <label
                  htmlFor="undefined_monthly"
                  id="undefinedLabel"
                  tabIndex="-1"
                >
                  Rent
                </label>
              </div>
            </div>
          </div>
        </div>
      </WithMessageAbove>
      <Surrounder
        Top={
          <span
            id="undefinedMessage"
          />
        }
      >
        <div
          className="surrounder"
        >
          <div
            className="top horizontal"
          >
            <span
              id="undefinedMessage"
            />
          </div>
          <div
            className="middle horizontal"
          >
            <div
              className="center horizontal content"
            >
              <span>
                Some content
              </span>
              <div
                className="cashflow-column cashflow-column-label"
              >
                <label
                  htmlFor="undefined_monthly"
                  id="undefinedLabel"
                  tabIndex="-1"
                >
                  Rent
                </label>
              </div>
            </div>
          </div>
        </div>
      </Surrounder>
    </div>
  </FormField>
</CashFlowRow>
`;
